# callback-trait

./: Cargo.toml  README.md
src/: lib.rs
