[package]
name = "callback-trait"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/wugren/callback-trait.git"
description = "Implement trait for Fn so that functions that accept traits as parameters can directly receive Fn parameters."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.52", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
